Fix T89367: Crash running edit-mesh select_linked_pick from Python